--- a/components/Career/Career.module.css
+++ b/components/Career/Career.module.css
@@ -1,4 +1,5 @@
 .section {
+    width: 50%;
     display: flex;
     flex-direction: column;
     gap: 5rem;
@@ -12,12 +13,32 @@
     font-size: 1.5rem;
 }
 
+.formations {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.experience {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
 .category {
     display: flex;
     gap: 2rem;
 }
 
-.logos {
+.description {
     display: flex;
     flex-direction: column;
+    gap: 2rem;
+}
+
+.logos {
+    width: 20%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
