--- a/components/Skills/Skills.module.css
+++ b/components/Skills/Skills.module.css
@@ -1,10 +1,19 @@
-.Skills {
+.section {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     gap: 2rem;
+}
+
+.Skills {
+    display: flex;
+    justify-content: flex-start;
+    gap: 5rem;
 }
 
 .h2 {
     font-size: 2rem;
+}
+
+.h3 {
+    font-size: 1.5rem;
 }
