--- a/app/globals.css
+++ b/app/globals.css
@@ -26,18 +26,28 @@ section {
 }
 
 h1{
-  font-size: 3rem;
-}
-
-h2 {
   font-size: 2rem;
+}
+h2 {
+  font-size: 1.7rem;
   color: var(--accent-main);
 }
-
 h3 {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
 }
 
 p, ul, li option {
   color: var(--text-muted);
+}
+
+@media (min-width: 768px) { 
+  h1{
+  font-size: 3rem;
+  }
+  h2 {
+  font-size: 2rem;
+  }
+  h3 {
+  font-size: 1.5rem;
+  }
 }
