--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap');
 @import "tailwindcss";
 
 :root {
@@ -25,6 +26,10 @@ section {
   border-radius: 1rem;
 }
 
+h1, h2{
+  font-family: "MedievalSharp", cursive;
+}
+
 h1{
   font-size: 2rem;
 }
@@ -38,6 +43,7 @@ h3 {
 
 p, ul, li option {
   color: var(--text-muted);
+  font-family: "Smooch Sans", sans-serif;
 }
 
 @media (min-width: 768px) { 
